--- a/scripts/references.bib
+++ b/scripts/references.bib
@@ -82,3 +82,15 @@ year={2018}
 	journal={},
 	year={2018}
 }
+@misc{government_2017, 
+title={2017-2020 National energy efficiency action plan}, 
+author={Government of Spain, Ministry of Energy, Tourism and Digital}, 
+year={2017}}
+
+@misc{fernandez_2021, 
+title={Spain: average rainfall 2013-2020}, 
+url={https://www.statista.com/statistics/1000106/annual-average-rainfall-in-spain/}, 
+journal={Statista}, 
+author={Lucía Fernández}, 
+year={2021}, 
+month={Jul}}
