added references for total power generation

--- a/scripts/references.bib
+++ b/scripts/references.bib
@@ -94,3 +94,17 @@ journal={Statista},
 author={Lucía Fernández}, 
 year={2021}, 
 month={Jul}}
+
+@electronic{sistemaelectrico2016,
+	title={{El Sistema Electrico Espanol 2016}},
+	url={https://www.ree.es/sites/default/files/11_PUBLICACIONES/Documentos/InformesSistemaElectrico/2016/inf_sis_elec_ree_2016.pdf},
+	journal={},
+	year={2016}
+}
+
+@electronic{sistemaelectrico2018,
+	title={{El Sistema Electrico Espanol 2018}},
+	url={https://www.ree.es/sites/default/files/11_PUBLICACIONES/Documentos/InformesSistemaElectrico/2018/inf_sis_elec_ree_2018.pdf},
+	journal={},
+	year={2018}
+}
